[gd_scene load_steps=10 format=3 uid="uid://bqu74wp77bj4o"]

[ext_resource type="Script" path="res://Assets/Scenes/UI/DebugUI/DebugInterface.gd" id="1_3xs1l"]
[ext_resource type="Texture2D" uid="uid://lcjse1hj8g18" path="res://Assets/Sprites/UI/Gauges/WRX/WRXRPMGauge.png" id="2_5xux6"]
[ext_resource type="Texture2D" uid="uid://ccyiay57yfq8s" path="res://Assets/Sprites/UI/Gauges/WRX/WRXNeedle.png" id="3_a3ip2"]
[ext_resource type="Texture2D" uid="uid://rlqw0ae27mvm" path="res://Assets/Sprites/UI/Gauges/WRX/WRXLight.png" id="4_cj76e"]
[ext_resource type="Texture2D" uid="uid://bq0neywrtvffi" path="res://Assets/Sprites/UI/Gauges/WRX/WRXSpeedometer.png" id="5_jm54w"]
[ext_resource type="Texture2D" uid="uid://d1lp18oyrsg81" path="res://Assets/Sprites/UI/Gauges/WRX/WRXSpeedometerNeedle.png" id="6_c2jpd"]
[ext_resource type="PackedScene" uid="uid://cn863gvdu2ksc" path="res://Assets/Sprites/UI/Gauges/WRX/speedometer_electronics.tscn" id="7_rb6g7"]

[sub_resource type="LabelSettings" id="LabelSettings_fslhh"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dn7r1"]
font_size = 25
font_color = Color(0.858824, 0, 0.141176, 1)

[node name="DebugInterface" type="CanvasLayer"]
script = ExtResource("1_3xs1l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 329.0
offset_bottom = -1.0
grow_vertical = 0

[node name="Text" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GearInfo" type="Label" parent="HBoxContainer/Text"]
layout_mode = 2
size_flags_vertical = 1
text = "Gear: 1"
label_settings = SubResource("LabelSettings_fslhh")

[node name="PowerInfo" type="Label" parent="HBoxContainer/Text"]
layout_mode = 2
size_flags_vertical = 1
text = "Power: 0"
label_settings = SubResource("LabelSettings_fslhh")

[node name="SpeedInfo" type="Label" parent="HBoxContainer/Text"]
layout_mode = 2
size_flags_vertical = 1
text = "Speed: 0 MPH"
label_settings = SubResource("LabelSettings_fslhh")

[node name="MovementRate" type="Label" parent="HBoxContainer/Text"]
layout_mode = 2
size_flags_vertical = 1
text = "Movement Rate: 0"
label_settings = SubResource("LabelSettings_fslhh")

[node name="TextB" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="RecoilInfo" type="Label" parent="HBoxContainer/TextB"]
layout_mode = 2
size_flags_vertical = 1
text = "Recoil Force: (0,0)"
label_settings = SubResource("LabelSettings_fslhh")

[node name="TractionFactor" type="Label" parent="HBoxContainer/TextB"]
layout_mode = 2
size_flags_vertical = 1
text = "Traction Factor: 0"
label_settings = SubResource("LabelSettings_fslhh")

[node name="FrictionFactor" type="Label" parent="HBoxContainer/TextB"]
layout_mode = 2
size_flags_vertical = 1
text = "Friction Factor: 0"
label_settings = SubResource("LabelSettings_fslhh")

[node name="RPMGauge" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -138.0
offset_right = 213.0
offset_bottom = 208.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_5xux6")

[node name="Needle" type="TextureRect" parent="RPMGauge"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -173.0
offset_right = 178.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(178, 172)
texture = ExtResource("3_a3ip2")

[node name="Light" type="TextureRect" parent="RPMGauge"]
layout_mode = 0
offset_right = 356.0
offset_bottom = 346.0
texture = ExtResource("4_cj76e")

[node name="SpeedometerGauge" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -359.0
offset_top = -213.0
offset_right = -75.0
offset_bottom = 71.0001
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 3
texture = ExtResource("5_jm54w")

[node name="Needle" type="TextureRect" parent="SpeedometerGauge"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(142, 142)
texture = ExtResource("6_c2jpd")

[node name="SpeedometerElectronics" parent="SpeedometerGauge" instance=ExtResource("7_rb6g7")]
layout_mode = 0
offset_right = 284.0
offset_bottom = 284.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "DEBUG MODE"
label_settings = SubResource("LabelSettings_dn7r1")

[connection signal="gearChanged" from="." to="." method="_on_gear_changed"]
